Fix positioning on mobile devices

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body, html {
     height: 100vh;
+    height: 100svh;
     width: 100vw;
     padding: 0;
     margin: 0;
@@ -29,6 +30,7 @@ a {
     justify-content: center;
     align-items: center;
     gap: 70px;
+    padding: 0px 15px;
 }
 
 .button {
